fixed account names alignment

--- a/profitly-app/src/components/accountNames/styles/AccountNames.css
+++ b/profitly-app/src/components/accountNames/styles/AccountNames.css
@@ -4,14 +4,5 @@
   justify-content: center;
   align-items: center;
   padding-top: 20px;
-}
-.account-names-dropdown {
-  width: 50%;
-  margin-left: 4px;
-}
-.account-names-text {
-  font-weight: bold;
   width: 100%;
-  display: flex;
-  align-items: center;
 }
